--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.5.1",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "color-convert": "^3.1.0",
